...
                                                    <rect key="frame" x="320.66666666666669" y="23" width="42" height="42"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="42" id="X09-ab-Mtu"/>
                                                        <constraint firstAttribute="height" constant="42" id="ch0-EP-iQ6"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="likeOn"/>
                                                    <connections>
                                                        <action selector="likeButtonTapped" destination="uYc-hB-yfB" eventType="touchUpInside" id="bqc-S8-BcG"/>
                                                    </connections>
                                                </button>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="data" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L58-OO-dhG" userLabel="LabelData">
                                                    <rect key="frame" x="28" y="102" width="152" height="18"/>
...
                                <connections>
                                    <outlet property="delegate" destination="R7P-dJ-qtn" id="baa-xB-pgp"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e2K-l3-oHp" userLabel="BackButton">
                                <rect key="frame" x="16" y="15" width="24" height="24"/>
                                <accessibility key="accessibilityConfiguration" identifier="NavBackButtonWhite"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="24" id="R0q-Yn-QfI"/>
                                    <constraint firstAttribute="height" constant="24" id="wuy-4u-CLL"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Backward"/>
...
                                    <constraint firstAttribute="height" constant="60" id="dQF-Z5-1gJ"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nqZ-fG-KoT">
                                <rect key="frame" x="16" y="646" width="361" height="48"/>
                                <color key="backgroundColor" name="YPWhite"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="bvp-zX-Iem"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="SFPro-Regular" family="SF Pro" pointSize="17"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Войти">
...
                                <color key="backgroundColor" name="YPWhite"/>
                                <wkWebViewConfiguration key="configuration">
                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                    <wkPreferences key="preferences"/>
                                </wkWebViewConfiguration>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="UnsplashWebView"/>
                                </userDefinedRuntimeAttributes>
                            </wkWebView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0qL-Im-fiu" userLabel="nav_back_button">
                                <rect key="frame" x="9" y="9" width="24" height="24"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="24" id="hsv-sT-C33"/>
...
