...
                self.viewDidLoad()
            }
    }
    
    
    func logoutButtonTapped(presentingViewController: UIViewController) {
        let alertController = UIAlertController(title: "Пока,пока!", message: "Уверены что хотите выйти ?", preferredStyle: .alert)
        let logoutAction = UIAlertAction(title: "Да", style: .default)  { [weak self] _ in
            guard let self = self else { return }
            self.tokenStorage.cleanToken()
            WebViewViewController.clean()
            guard let window = UIApplication.shared.windows.first else {
                fatalError("Invalid Configuration")
            }
...
