//
//  Resources.swift
//  ImageFeedz
//
//  Created by Игорь Полунин on 12.04.2023.
//

import Foundation
import UIKit
//
//enum ProfileImages {
//    static var logoutButton = UIImage(named: "logoutButton")
//    static var avatarImage = UIImage(named: "avatar")
//}
